# password_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/password_manager/: config.py  interfaces.py  main_cli.py  main_gui.py  password_manager_api.py
src/password_manager/controllers/: __init__.py  auth_controller.py  entry_controller.py  error_handler.py  input_validator.py  main_controller.py  password_controller.py  search_controller.py  state_manager.py
src/password_manager/utils/: database_manager.py  encryption_handler.py  password_generator.py  verification_utils.py
src/password_manager/views/: __init__.py  auth_widget.py  change_password_dialog.py  dashboard_widget.py  entry_dialog.py  main_window.py  password_generator_dialog.py
tests/password_manager/: test_password_manager_api.py
tests/password_manager/utils/: test_database_manager.py  test_encryption_handler.py  test_password_generator.py  test_verification_utils.py
